# joybubbles

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac  joybubbles.pc.in
joy/: Makefile.am  accumulator.c  accumulator.h  animation.c  animation.h  application.c  application.h  bubble.c  bubble.h  bubbles.h  buffer.c  buffer.h  button.c  button.h  container.c  container.h  cursor.c  cursor.h  dbus.c  dbus.h  device.c  device.h  easing.h  error.c  error.h  filter.c  filter.h  image.c  image.h  iterator.c  iterator.h  label.c  label.h  macros.h  marshal.c  marshal.h  marshal.list  screen.c  screen.h  sink.c  (+16 more)
joy/animation/: Makefile.am  fade.c  fade.h  grow.c  grow.h  move.c  move.h  parallel.c  parallel.h  resize.c  resize.h  scale.c  scale.h  series.c  series.h  types.h
joy/device/: Makefile.am  joy-gen-keysyms.py  keyboard.c  keyboard.h  keysym.h  mouse.c  mouse.h  types.h
joy/easing/: COPYING  Makefile.am  back.c  back.h  bounce.c  bounce.h  circular.c  circular.h  curve.c  curve.h  elastic.c  elastic.h  exponential.c  exponential.h  polynomial.c  polynomial.h  sinusoidal.c  sinusoidal.h
joy/filter/: Makefile.am  gaussian.c  gaussian.h  types.h
joy/iterator/: Makefile.am  hash.c  hash.h  list.c  list.h  ptr-array.c  ptr-array.h  ptr.c  ptr.h  queue.c  queue.h  types.h
joy/platform/: Makefile.am
joy/platform/gfx3d/: Makefile.am  application.c  application.h  keyboard.c  keyboard.h  mouse.c  mouse.h  screen.c  screen.h  source.c  source.h  types.h  window.c  window.h
joy/platform/x11/: Makefile.am  application.c  application.h  keyboard.c  keyboard.h  mouse.c  mouse.h  screen.c  screen.h  source.c  source.h  types.h  window.c  window.h
joy/source/: Makefile.am  dbus.c  dbus.h
joy/style/: Makefile.am  button.c  button.h  types.h  window.c  window.h
joy/theme/: Makefile.am
joy/theme/default/: Makefile.am  button.c  button.h  default.c  default.h
joy/theme/simple/: Makefile.am
m4/: cflags.m4  joybubbles.m4  ldflags.m4
pkgconfig/: Makefile.am  joybubbles-dbus.pc.in  joybubbles.pc.in
tests/: Makefile.am  iterator-test.c  joybubbles-test.c
